[gd_scene format=3 uid="uid://vb5o7hh5an8j"]

[ext_resource type="Script" uid="uid://dedhjloxblho6" path="res://scenes/game_elements/characters/npcs/elder/components/elder.gd" id="1_l4hfl"]
[ext_resource type="SpriteFrames" uid="uid://cqe47tmqq3mu4" path="res://scenes/game_elements/characters/components/sprite_frames/elder2.tres" id="2_ewone"]
[ext_resource type="Script" uid="uid://du8wfijr35r35" path="res://scenes/game_elements/props/interact_area/components/interact_area.gd" id="3_ftke6"]
[ext_resource type="Script" uid="uid://edcifob4jc4s" path="res://scenes/game_logic/talk_behavior.gd" id="4_m4ftv"]
[ext_resource type="Resource" uid="uid://dg0fe4uwdjlbd" path="res://scenes/game_elements/characters/npcs/elder/components/template_quest_starter.dialogue" id="5_l4hfl"]
[ext_resource type="AudioStream" uid="uid://dxbxx6x5h7d8p" path="res://assets/third_party/sounds/characters/npcs/elder/BookPage.ogg" id="6_wjjqs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]
radius = 12.0
height = 74.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ak236"]
radius = 8.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3eksq"]
size = Vector2(67, 72)

[node name="TemplateElder" type="CharacterBody2D" unique_id=1472383914]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_l4hfl")
quest_directory = "res://scenes/quests/template_quests/"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1257619830]
unique_name_in_owner = true
position = Vector2(0, -40)
sprite_frames = ExtResource("2_ewone")
animation = &"idle"
autoplay = "idle"
frame = 5

[node name="BodyShape" type="CollisionShape2D" parent="." unique_id=901172117]
position = Vector2(-1, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="StaffShape" type="CollisionShape2D" parent="." unique_id=1260439771]
position = Vector2(-49, 15)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ak236")

[node name="InteractArea" type="Area2D" parent="." unique_id=1055763640]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 0
script = ExtResource("3_ftke6")
action = "Talk to Template Elder"
metadata/_custom_type_script = "uid://du8wfijr35r35"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" unique_id=123091838]
position = Vector2(7.5, -40)
shape = SubResource("RectangleShape2D_3eksq")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="TalkBehavior" type="Node" parent="." unique_id=1671593483 node_paths=PackedStringArray("interact_area")]
unique_name_in_owner = true
script = ExtResource("4_m4ftv")
dialogue = ExtResource("5_l4hfl")
interact_area = NodePath("../InteractArea")
metadata/_custom_type_script = "uid://edcifob4jc4s"

[node name="Sounds" type="Node2D" parent="." unique_id=178676043]

[node name="BookSound" type="AudioStreamPlayer2D" parent="Sounds" unique_id=212687925]
unique_name_in_owner = true
stream = ExtResource("6_wjjqs")
volume_db = -6.0
pitch_scale = 2.0
max_distance = 1500.0
attenuation = 3.0
bus = &"SFX"

[node name="StorybookLayer" type="CanvasLayer" parent="." unique_id=204985135]
unique_name_in_owner = true
